Fix longer show item info text-alignment to be center aligned

--- a/wild-blue-yonder-website/src/components/ShowItem/show-item.css
+++ b/wild-blue-yonder-website/src/components/ShowItem/show-item.css
@@ -31,6 +31,9 @@
     display: flex;
     flex-direction: column;
   }
+  .show-item-container p {
+    text-align: center;
+  }
   .date-and-title {
     align-items: center;
   }
